--- a/portfolio.html
+++ b/portfolio.html
@@ -13,20 +13,20 @@
             <h1 class="sub-title">MyWork</h1>
             <div class="work-list">
                 <div class="work">
-                    <img src="./img/workimg0.jpeg">
+                    <img src="./img/dmm.png">
                     <div class="layer">
                         <h3>Ecommerce Website</h3>
-                        <p>let customer to sell or buy goods<br> through online medium</p>
+                        <p>for sellings goods<br> through online medium</p>
                         <a href="">
                             <i class="fa-solid fa-arrow-up-right-from-square"></i>
                         </a>
                     </div>
                 </div>
                 <div class="work">
-                    <img src="./img/workimg.1.jpeg">
+                    <img src="./img/snakegames.png">
                     <div class="layer">
-                        <h3>Suggestion Management System</h3>
-                        <p>let students to lodge a suggestion<br> to concern authority</p>
+                        <h3>Classic Snake Game</h3>
+                        <p>let user to play game<br>and measured high score</p>
                         <a href="">
                             <i class="fa-solid fa-arrow-up-right-from-square"></i>
 
@@ -34,10 +34,10 @@
                     </div>
                 </div>
                 <div class="work">
-                    <img src="./img/workimg2.jpeg">
+                    <img src="./img/rps.png">
                     <div class="layer">
-                        <h3>Vehicle Management System</h3>
-                        <p>Allow customers to park their vehicles</p>
+                        <h3>Rock Paper Scissors Game</h3>
+                        <p>Allow user and machine to choose choices</p>
                         <a href="#">
                             <i class="fa-solid fa-arrow-up-right-from-square"></i>
                         </a>
